--- a/templates/aci-exporter/service.yaml
+++ b/templates/aci-exporter/service.yaml
@@ -1,14 +1,14 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: {{ .Values.config.url }}
+  name: {{ .Values.aci_exporter.url }}
   labels:
     {{- include "aci-monitoring-stack.labels" . | nindent 4 }}
 spec:
   type: ClusterIP
   ports:
-    - port: {{ .Values.config.port }}
-      targetPort: {{ .Values.config.port }}
+    - port: {{ .Values.aci_exporter.port }}
+      targetPort: {{ .Values.aci_exporter.port }}
       protocol: TCP
       name: http
   selector:
