--- a/values.yaml
+++ b/values.yaml
@@ -1,10 +1,16 @@
-image:
-  repository: quay.io/camillo/aci-exporter
-  tag: 58_node_login_pagination
-  pullPolicy: Always
-config:
+aci_exporter:
+  image:
+    repository: quay.io/camillo/aci-exporter
+    tag: issue_58
+    pullPolicy: Always
   port: 9643
+  # IF you change this URL YOU MUST Change the aciServiceDiscoveryURLs.sd value to match
   url: aci-exporter-svc
+  httpclient:
+    insecurehttps: true
+    keepalive: 120
+    timeout: 30
+    pagesize: 1000
   fabrics: {}
   
   # Helm can't use variables in a Value file so naming the service 
@@ -15,13 +21,9 @@ config:
   # Sadly acnhors don't support string concatenation so we have to ensure the aci-sd-url matches the config.port and config.url
   # You  need to change this ONLY if you want to deploy this chart multiple times in the same namespace to avoid 
   # having duplicate service name in the same NS.
-  aciServiceDiscoveryURL: ""
+  aciServiceDiscoveryURLs:
+    sd: http://aci-exporter-svc:9643/sd
   prefix: aci_
-  httpclient:
-    insecurehttps: true
-    keepalive: 120
-    timeout: 30
-
 
 prometheus:
   configmapReload:
@@ -142,6 +144,20 @@ promtail:
   config:
     clients:
     - url: http://loki-gateway/loki/api/v1/push
+    snippets:
+      scrapeConfigs: |
+        {{- range $k, $v := .Values.extraPorts }}
+        - job_name: {{ $v.name }}
+          syslog:
+            listen_address: 0.0.0.0:{{ $v.containerPort }}
+            labels:
+              job: aci-monitoring-stack
+              fabric: {{ $v.name }}
+          relabel_configs:
+            - source_labels:
+                - __syslog_message_hostname
+              target_label: switch
+          {{- end }}
   daemonset:
     enabled: false
   deployment:
@@ -232,14 +248,17 @@ loki:
         kvstore:
           store: inmemory
       enable_alertmanager_v2: true
-
   deploymentMode: SimpleScalable
   backend:
     replicas: 3
+    persistence:
+      size: 2Gi
   read:
     replicas: 3
   write:
     replicas: 3
+    persistence:
+      size: 2Gi
   # Enable minio for storage
   minio:
     enabled: true
