chunks-cache to 1G

--- a/charts/aci-monitoring-stack/values.yaml
+++ b/charts/aci-monitoring-stack/values.yaml
@@ -264,7 +264,8 @@ loki:
     enabled: true
   singleBinary:
     replicas: 0
-
+  chunksCache:
+    allocatedMemory: 1024
   ingester:
     replicas: 0
   querier:
