--- a/charts/aci-monitoring-stack/Chart.yaml
+++ b/charts/aci-monitoring-stack/Chart.yaml
@@ -15,19 +15,19 @@ type: application
 # This is the chart version. This version number should be incremented each time you make changes
 # to the chart and its templates, including the app version.
 # Versions are expected to follow Semantic Versioning (https://semver.org/)
-version: 0.1.0
+version: 0.1.1
 # This is the version number of the application being deployed. This version number should be
 # incremented each time you make changes to the application. Versions are not expected to
 # follow Semantic Versioning. They should reflect the version the application is using.
 # It is recommended to use it with quotes.
-appVersion: "0.8.0"
+appVersion: "v0.8.0"
 dependencies:
 - name: prometheus
-  version: "25.22.1"
+  version: "25.24.1"
   repository: "https://prometheus-community.github.io/helm-charts"
   condition: prometheus.enabled
 - name: loki
-  version: "6.6.5"
+  version: "6.7.3"
   repository: "https://grafana.github.io/helm-charts"
   condition: loki.enabled
 - name: "promtail"
@@ -37,4 +37,4 @@ dependencies:
 - name: "grafana"
   condition: grafana.enabled
   repository: "https://grafana.github.io/helm-charts"
-  version: "8.3.2"
+  version: "8.3.6"
