--- a/charts/aci-monitoring-stack/templates/loki/loki-configmaps-datasources.yaml
+++ b/charts/aci-monitoring-stack/templates/loki/loki-configmaps-datasources.yaml
@@ -1,4 +1,5 @@
 {{- if $.Values.grafana.sidecar.datasources.enabled }}
+{{- if $.Values.loki.enabled }}
 apiVersion: v1
 kind: ConfigMap
 metadata:
@@ -34,4 +35,5 @@ data:
       {{- end }}
 {{- end }}
 
+{{- end }}
 {{- end }}
