closes #22 and labs

--- a/charts/aci-monitoring-stack/templates/syslog-ng/deployment.yaml
+++ b/charts/aci-monitoring-stack/templates/syslog-ng/deployment.yaml
@@ -1,3 +1,4 @@
+{{- if $.Values.syslog.enabled }}
 apiVersion: apps/v1
 kind: Deployment
 metadata:
@@ -33,3 +34,4 @@ spec:
       - name: {{ $.Release.Name }}-syslog-ng-config
         configMap:
           name: {{ $.Release.Name }}-syslog-ng-config
+{{- end }}
