--- a/charts/aci-monitoring-stack/templates/syslog-ng/configmap.yaml
+++ b/charts/aci-monitoring-stack/templates/syslog-ng/configmap.yaml
@@ -1,3 +1,4 @@
+{{- if $.Values.syslog.enabled }}
 apiVersion: v1
 kind: ConfigMap
 metadata:
@@ -31,3 +32,4 @@ data:
         @module appmodel
         @include 'scl/*/*.conf'
         @define java-module-dir "`module-install-dir`/java-modules"
+{{- end }}
