--- a/charts/aci-monitoring-stack/templates/syslog-ng/service.yaml
+++ b/charts/aci-monitoring-stack/templates/syslog-ng/service.yaml
@@ -4,7 +4,7 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: {{ $.Release.Name }}-syslog-{{ $key }}
+  name: {{ $.Release.Name }}-syslog-{{ $values.name }}
   labels:
     {{- with $values.labels }}
     {{- toYaml . | nindent 4 }}
