--- a/charts/aci-monitoring-stack/Chart.yaml
+++ b/charts/aci-monitoring-stack/Chart.yaml
@@ -15,7 +15,7 @@ type: application
 # This is the chart version. This version number should be incremented each time you make changes
 # to the chart and its templates, including the app version.
 # Versions are expected to follow Semantic Versioning (https://semver.org/)
-version: 0.1.9
+version: 0.2.0
 # This is the version number of the application being deployed. This version number should be
 # incremented each time you make changes to the application. Versions are not expected to
 # follow Semantic Versioning. They should reflect the version the application is using.
@@ -23,11 +23,11 @@ version: 0.1.9
 appVersion: "v0.8.0"
 dependencies:
 - name: prometheus
-  version: "25.29.0"
+  version: "26.0.1"
   repository: "https://prometheus-community.github.io/helm-charts"
   condition: prometheus.enabled
 - name: loki
-  version: "6.18.0"
+  version: "6.23.0"
   repository: "https://grafana.github.io/helm-charts"
   condition: loki.enabled
 - name: "promtail"
@@ -37,4 +37,8 @@ dependencies:
 - name: "grafana"
   condition: grafana.enabled
   repository: "https://grafana.github.io/helm-charts"
-  version: "8.5.12"
+  version: "8.8.2"
+- name: "memgraph"
+  condition: memgraph.enabled
+  repository: "https://memgraph.github.io/helm-charts"
+  version: "0.1.8"
