initial commit need more work

--- a/charts/aci-monitoring-stack/templates/backup2graph/CronJob.yml
+++ b/charts/aci-monitoring-stack/templates/backup2graph/CronJob.yml
@@ -12,6 +12,9 @@ spec:
     spec:
       template:
         spec:
+          {{- if .Capabilities.APIVersions.Has "security.openshift.io/v1" }}
+          serviceAccountName: {{ .Values.global.serviceAccountName }}
+          {{- end }}
           containers:
             - name: aci-backup2graph
               image: "{{ .Values.backup2graph.image.repository }}:{{ .Values.backup2graph.image.tag | default .Chart.AppVersion }}"
