chore: bump charts

--- a/charts/aci-monitoring-stack/values.yaml
+++ b/charts/aci-monitoring-stack/values.yaml
@@ -208,7 +208,7 @@ syslog:
 
 loki:
   enabled: true
-  openshift-buckets:
+  cephBucket:
     enabled: false
     bucketName: loki
     storageClassName: ocs-storagecluster-ceph-rgw
